--- a/index.html
+++ b/index.html
@@ -3,52 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Affirmation – En Daglig Inspiration</title>
+    <!-- Google Font: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         html, body {
+            height: 100%;
             margin: 0;
-            padding: 0;
             font-family: 'Poppins', sans-serif;
+            overflow-x: hidden; /* forhindrer horisontal scroll */
+        }
+
+        body {
             background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
             color: #333;
-            min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
+            padding: 50px 20px;
+            text-align: center;
         }
 
         header {
             width: 100%;
-            text-align: center;
-            padding: 30px 10px 10px 10px;
-        }
-
-        h1 {
-            font-size: clamp(2rem, 5vw, 3.5rem);
-            color: #0D47A1;
-            margin: 0 0 10px 0;
-        }
-
-        h2 {
-            font-size: clamp(1.2rem, 4vw, 2rem);
-            color: #1E88E5;
-            font-weight: 400;
-            margin: 0;
         }
 
         .content {
+            flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            width: 90%;
-            max-width: 800px;
-            padding: 20px 10px;
+            margin-top: 20px;
         }
 
         .pingvin-container {
-            width: 100%;
+            width: 90%;
             max-width: 600px;
             aspect-ratio: 16 / 9;
             overflow: hidden;
@@ -62,42 +52,40 @@
             object-fit: contain;
         }
 
+        h1 {
+            font-size: 52px;
+            color: #0D47A1;
+            margin: 0 0 10px 0;
+        }
+
+        h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #1E88E5;
+            font-weight: 400;
+        }
+
+        p {
+            font-size: 36px;
+            margin: 20px 0 20px 0;
+        }
+
         button {
-            font-size: clamp(1rem, 4vw, 2rem);
-            padding: 10px 20px;
+            padding: 12px 25px;
+            font-size: 36px;
             margin: 15px 0;
             border: none;
             border-radius: 8px;
             background-color: #FFD966;
             color: #0D47A1;
-            font-weight: 600;
             cursor: pointer;
+            font-weight: 600;
             transition: transform 0.2s, background-color 0.2s;
         }
 
         button:hover {
             transform: scale(1.05);
             background-color: #FFE58A;
-        }
-
-        p#affirmation {
-            font-size: clamp(1rem, 4vw, 2rem);
-            text-align: center;
-            margin: 15px 0;
-            word-wrap: break-word;
-        }
-
-        ul#todos {
-            list-style: none;
-            padding-left: 0;
-            text-align: center;
-        }
-
-        ul#todos li {
-            font-size: clamp(1rem, 4vw, 1.8rem);
-            margin: 5px 0;
-            display: block;
-            white-space: normal; /* Tillader linjeskift på små skærme */
         }
 
         .morning {
@@ -110,7 +98,7 @@
             font-weight: 600;
         }
 
-        /* Musikafspiller i venstre hjørne */
+        /* Musikknap øverst i venstre hjørne */
         .music-player {
             position: fixed;
             top: 20px;
@@ -132,16 +120,69 @@
             transform: scale(1.2);
         }
 
-        /* Responsiv til mindre skærme */
+        /* To-Do liste styling */
+        ul {
+            list-style: none;
+            padding-left: 0;
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            max-width: 600px;
+            width: 100%;
+        }
+
+        li {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            font-size: 32px;
+            line-height: 1.3;
+            text-align: left;
+        }
+
+        li::before {
+            content: "⭐ ";
+            margin-right: 8px;
+        }
+
+        /* Blade animation */
+        .leaf {
+            position: fixed;
+            top: -100px;
+            width: 50px;
+            height: 50px;
+            background-image: url('leaf.png'); /* dit blad-ikon */
+            background-size: cover;
+            pointer-events: none;
+            z-index: 500;
+            opacity: 0.8;
+            animation-name: fall;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+        }
+
+        @keyframes fall {
+            0% { transform: translateY(-100px) rotate(0deg); opacity: 0.8; }
+            100% { transform: translateY(120vh) rotate(360deg); opacity: 0.8; }
+        }
+
         @media (max-width: 600px) {
-            .pingvin-container {
-                max-width: 90%;
-            }
+            h1 { font-size: 36px; }
+            h2 { font-size: 24px; }
+            p { font-size: 24px; }
+            button { font-size: 24px; padding: 8px 16px; }
+            li { font-size: 20px; }
         }
     </style>
 </head>
 <body>
-    <!-- Musikafspiller i venstre hjørne -->
+    <header>
+        <h1>Affirmation</h1>
+        <h2>En healende måde at reflektere på</h2>
+    </header>
+
     <div class="music-player">
         <button id="musicBtn">🔊</button>
         <audio id="backgroundMusic" loop>
@@ -149,11 +190,6 @@
             Din browser understøtter ikke lydafspilning.
         </audio>
     </div>
-
-    <header>
-        <h1>Affirmation</h1>
-        <h2>En healende måde at reflektere på</h2>
-    </header>
 
     <div class="content">
         <div class="pingvin-container">
@@ -193,29 +229,59 @@
             }
         });
 
-        const morningAffirmations = ["I dag starter jeg med ro og glæde.", "Jeg vælger at være stærk og positiv.", "Min energi åbner nye muligheder.", "Jeg er fokuseret og klar til dagen.", "Jeg tager ansvar for min egen lykke.", "Jeg møder dagen med et åbent hjerte.", "Jeg tiltrækker gode oplevelser.", "Jeg har tillid til mig selv.", "Jeg er taknemmelig for alt, jeg har.", "Jeg vælger glæde i hvert øjeblik."];
+        const morningAffirmations = [
+            "I dag starter jeg med ro og glæde.",
+            "Jeg vælger at være stærk og positiv.",
+            "Min energi åbner nye muligheder.",
+            "Jeg er fokuseret og klar til dagen.",
+            "Jeg tager ansvar for min egen lykke.",
+            "Jeg møder dagen med et åbent hjerte.",
+            "Jeg tiltrækker gode oplevelser.",
+            "Jeg har tillid til mig selv.",
+            "Jeg er taknemmelig for alt, jeg har.",
+            "Jeg vælger glæde i hvert øjeblik."
+        ];
 
-        const eveningAffirmations = ["Jeg slipper dagen med taknemmelighed.", "Jeg fortjener hvile og fred.", "Jeg sender kærlige tanker til mig selv.", "Jeg reflekterer over dagens gode øjeblikke.", "Jeg tilgiver mig selv og andre.", "Jeg lader bekymringer falde.", "Jeg er stolt af mig selv i dag.", "Jeg fylder mig selv med ro.", "Jeg giver mig selv kærlighed og omsorg.", "Jeg forbereder mig på en god nats søvn."];
+        const eveningAffirmations = [
+            "Jeg slipper dagen med taknemmelighed.",
+            "Jeg fortjener hvile og fred.",
+            "Jeg sender kærlige tanker til mig selv.",
+            "Jeg reflekterer over dagens gode øjeblikke.",
+            "Jeg tilgiver mig selv og andre.",
+            "Jeg lader bekymringer falde.",
+            "Jeg er stolt af mig selv i dag.",
+            "Jeg fylder mig selv med ro.",
+            "Jeg giver mig selv kærlighed og omsorg.",
+            "Jeg forbereder mig på en god nats søvn."
+        ];
 
-        const morningTodos = [["Tag dyb vejrtrækning","Skriv 3 ting du vil opnå","Start dagen med et smil","Lav et glas vand","Gentag en positiv sætning"],["Lav en positiv liste","Tag på en kort gåtur","Gentag en positiv sætning","Planlæg dagens vigtigste opgave","Visualiser succes"],["Prøv en ny aktivitet","Planlæg en lille succes","Drik et glas vand","Lav taknemmelighedsliste","Start med musik du elsker"],["Fokusér på én opgave","Lav morgenritual","Visualiser dagens succes","Send kærlige tanker","Skriv dagens intention"],["Skriv hvad der gør dig glad","Prioriter dagens vigtigste opgave","Tal venligt til dig selv","Lav en kort meditation","Planlæg sjove oplevelser"],["Start med åbent hjerte","Send kærlige tanker","Planlæg glædesøjeblik","Gentag positiv sætning","Lav taknemmelighedsliste"],["Sæt mål om sjove oplevelser","Vær opmærksom på små glæder","Lav noget kreativt","Drik et glas vand","Visualiser succes"],["Gentag positiv sætning højt","Lav en kort meditation","Vær opmærksom på omgivelserne","Lav taknemmelighedsliste","Start dagen med et smil"],["Lav taknemmelighedsliste","Hils på en venlig person","Skriv dagens intention","Gentag positiv sætning","Lav en kort meditation"],["Vælg en glædelig handling","Del noget positivt","Start dagen med musik","Skriv 3 ting du værdsætter","Lav taknemmelighedsliste"]];
+        const morningTodos = [
+            ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil"],
+            ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning"],
+            ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand"]
+        ];
 
-        const eveningTodos = [["Skriv 3 ting du er taknemmelig for","Tag et varmt bad","Lyt til beroligende musik","Læs lidt i en bog","Lav en kort meditation"],["Luk dagen med et smil","Læs en bog inden sengetid","Lav vejrtrækning","Skriv dagens læring","Planlæg positiv morgen"],["Skriv kærligt brev til dig selv","Mediter et par minutter","Sig noget venligt til dig selv","Lav taknemmelighedsliste","Visualiser ro"],["Reflekter over små sejre","Skriv dagens læring","Planlæg positiv morgen","Lyt til afslappende musik","Lav vejrtrækning"],["Lav fred med dagens fejltrin","Tilgiv dig selv og andre","Lav afslappende rutine","Tag et varmt bad","Lyt til musik"],["Lad bekymringer falde","Sluk skærme 30 min før sengetid","Drik en kop urtete","Lav en kort meditation","Skriv 3 ting du værdsætter"],["Tæl dagens præstationer","Ros dig selv for små ting","Lav en kort meditation","Lyt til musik","Planlæg en positiv morgen"],["Fyld dig med ro","Lyt til afslappende musik","Lav afslappende vejrtrækning","Skriv 3 ting du værdsætter","Lav en kort meditation"],["Giv dig selv kærlighed og omsorg","Skriv ned hvad du værdsætter","Tag et øjeblik i stilhed","Lav en kort meditation","Lyt til musik"],["Forbered dig på god søvn","Sørg for mørkt og roligt soveområde","Lav kort afslapningsritual","Skriv dagens læring","Lyt til afslappende musik"]];
+        const eveningTodos = [
+            ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik"],
+            ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning"],
+            ["Skriv kærligt brev til dig selv", "Mediter et par minutter", "Sig noget venligt til dig selv"]
+        ];
 
         function showAffirmation() {
             const hour = new Date().getHours();
             const affirmationElement = document.getElementById("affirmation");
             let affirmation, todos;
 
-            if(hour < 12){
+            if (hour < 12) {
                 const idx = Math.floor(Math.random() * morningAffirmations.length);
                 affirmation = morningAffirmations[idx];
-                todos = getRandomTodos(morningTodos[idx]);
+                todos = morningTodos[idx % morningTodos.length];
                 affirmationElement.textContent = "Morgeninspiration: " + affirmation;
                 affirmationElement.className = "morning";
             } else {
                 const idx = Math.floor(Math.random() * eveningAffirmations.length);
                 affirmation = eveningAffirmations[idx];
-                todos = getRandomTodos(eveningTodos[idx]);
+                todos = eveningTodos[idx % eveningTodos.length];
                 affirmationElement.textContent = "Afteninspiration: " + affirmation;
                 affirmationElement.className = "evening";
             }
@@ -224,15 +290,21 @@
             ul.innerHTML = "";
             todos.forEach(todo => {
                 const li = document.createElement("li");
-                li.textContent = "⭐ " + todo;
+                li.textContent = todo;
                 ul.appendChild(li);
             });
         }
 
-        function getRandomTodos(todoArray){
-            const copy = [...todoArray];
-            copy.sort(() => Math.random() - 0.5);
-            return copy.slice(0,3);
+        // Blade-animation
+        const leafCount = 5; // færre blade
+        for (let i = 0; i < leafCount; i++) {
+            const leaf = document.createElement('div');
+            leaf.className = 'leaf';
+            leaf.style.left = Math.random() * 100 + 'vw';
+            leaf.style.animationDuration = (10 + Math.random() * 10) + 's'; // langsommere
+            leaf.style.width = (40 + Math.random() * 40) + 'px';
+            leaf.style.height = leaf.style.width;
+            document.body.appendChild(leaf);
         }
     </script>
 </body>
